--- a/pom.xml
+++ b/pom.xml
@@ -53,7 +53,15 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
+			 
+        
+          <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <version>2.12</version>
+    </plugin>
+       
+ 
 		</plugins>
 	</build>
-
 </project>
